2020-11-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* spec file: add BuildRequires: %{__make} (will be required in F34).

2020-10-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* waitlib: fix testwait.c failure with LTO enabled on F33.

	* pop3login.c: fflush before STARTLS.

5.0.11

2020-05-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-authlib API update.

2020-04-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add AC_PROG_CC_C99 to configure
5.0.10

2020-02-25  FlorianMickler <florian@mickler.org>

	* tcpd/starttls.c (dossl): Start client after negotiating SSL,
	in order to allow EXTERNAL client certificate authentication.

2019-12-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix virtual IP and hostname handling when using GnuTLS for SSL.

2019-09-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap, pop3: include remote port TCP port number together with the
	IP address, in log messages.

5.0.8

2019-08-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Update documentation in the imapd and pop3d ssl config flies.

	* Fix the RPM spec file for CentOS 7

5.0.7

2019-02-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3dserver.c (do_retr): Use the new MIME_UNICODE_MESSAGE_TYPE
	setting to set the type of the wrapped MIME attachment.

5.0.6

2019-01-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3dserver.c: Fix parsing of pop3d file cache, on some
	architectures.

2019-01-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd/libcouriertls.c: Ignore unreadable cert files.

5.0.5

2018-12-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* fetch.c: Send an alert about a Unicode messages to a non-Unicode
	client at most once per IMAP session.

5.0.4

2018-11-28  Hideki SAKAMOTO <hsakamt@tsnr.com>

	* pop3dserver.c: Deal with MS Outlook's broken implementation of
	RFC 6856.

5.0.3

2018-11-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3dserver.c (calcsize): Fix spurious flagging of non-UTF8
	messages as UTF-8.
