@@ -1,3 +1,7 @@
+2020-11-30  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* imap: send corrupted Unicode alerts only for new messages.
+
 2020-11-04  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* spec file: add BuildRequires: %{__make} (will be required in F34).
